[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/deck/Hand.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/deck/Deck.gd" type="Script" id=4]
[ext_resource path="res://src/scenes/deck/CardGridContainer.gd" type="Script" id=5]

[node name="Deck" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideBar" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -220.0
rect_min_size = Vector2( 175, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscardPileButton" type="Button" parent="SideBar"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.0
margin_top = 20.0
margin_right = 55.0
margin_bottom = 20.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Discard pile (0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="VBoxContainer" parent="SideBar"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_vertical = 2
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawPileButton" type="Button" parent="SideBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -40.0
margin_right = 55.0
margin_bottom = -20.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Draw pile (0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawPile" type="GridContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
columns = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscardPile" type="GridContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
columns = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
